--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -4,7 +4,7 @@
 		<li>
 			<a
 				class="inline-block p-2 sm:hover:text-link"
-				href="https://github.com/chrismwilliams/astro-cactus"
+				href="https://github.com/Xylotox"
 				target="_blank"
 				rel="noopener noreferrer"
 			>
@@ -32,7 +32,7 @@
 		<li>
 			<a
 				class="inline-block p-2 sm:hover:text-link"
-				href="https://github.com/chrismwilliams/astro-cactus"
+				href="https://twitter.com/Meandro"
 				target="_blank"
 				rel="noopener noreferrer"
 			>
@@ -94,7 +94,7 @@
 			</a>
 		</li>
 		<li>
-			<a class="inline-block p-2 sm:hover:text-link" href="mailto:me@example.com">
+			<a class="inline-block p-2 sm:hover:text-link" href="mailto:if@meandro.net">
 				<svg
 					class="h-6 w-6"
 					aria-hidden="true"
